--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@metaplex-foundation/umi-signer-wallet-adapters": "^0.9.2",
     "@metaplex-foundation/umi-uploader-bundlr": "^0.9.2",
     "@metaplex-foundation/umi-uploader-irys": "^0.9.2",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-phantom": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.35",
@@ -23,6 +24,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.1",
     "arweave": "^1.15.1",
+    "bs58": "^4.0.1",
     "html2canvas": "^1.4.1",
     "next": "14.2.5",
     "react": "^18",
